Updated fire store processor.

--- a/.env.dist
+++ b/.env.dist
@@ -2,6 +2,7 @@ ENVIRONMENT=
 
 LICHESS_API_KEY=
 LICHESS_USERNAME=
+LICHESS_API_LIMIT=20
 
 GOOGLE_APPLICATION_CREDENTIALS=secret.json
 ARCHIVE_FOLDER_ID=
