Cleaned up and tested.

--- a/.env.dist
+++ b/.env.dist
@@ -1,7 +1,9 @@
 ENVIRONMENT=
 
+TIMEZONE=Europe/Kiev
+
 LICHESS_API_KEY=
-LICHESS_USERNAME=
+LICHESS_USER_ID=
 LICHESS_API_LIMIT=20
 
 GOOGLE_APPLICATION_CREDENTIALS=secret.json
